--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,5 +31,5 @@ jobs:
     docker:
       - image: circleci/python:3.8-buster
     steps:
-      - checkout
+      - checkou
       - run: echo "checkout repo for test"
