--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -33,3 +33,9 @@ jobs:
     steps:
       - checkou
       - run: echo "checkout repo for test"
+
+workflows:
+  main:
+    jobs:
+      - build
+      - test
