--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,7 +31,7 @@ jobs:
     docker:
       - image: circleci/python:3.8-buster
     steps:
-      - checkou
+      - checkout
       - run: echo "checkout repo for test"
 
 workflows:
