--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,7 +24,7 @@ jobs:
           command: |
             python -m venv test
             . test/bin/activate
-            python -m pip install -r .\requirments.txt
+            python -m pip install -r requirements.txt
       - run:
           name: Run python example test cases
           command: |
