--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,12 +22,14 @@ jobs:
       - run:
           name: Install python dependency in a venv
           command: |
-            python -m venv test
-            . test/bin/activate
-            python -m pip install -r requirements.txt
+            python -m venv venv
+            . venv/bin/activate
+            pip -q install -r requirements.txt
+            pip install pytest
       - run:
           name: Run python example test cases
           command: |
+            . venv/bin/activate
             python -m pytest .\test\
       - run: echo "testing ends"
   docker_build:
